# polywag-rs

./: Cargo.toml
benches/: bench_fit.rs
src/: lib.rs  polyfit.rs  simd.rs  storage.rs
tests/: polyfit.rs
tests/common/: mod.rs
