[package]
name = "polywag"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
pastey = "0.2.1"
wide = "1.1.1"
bumpalo = {version = "3.14.0", features= ["boxed", "collections"]}
cfg-if = "1.0.4"

[dev-dependencies]
approx = "0.5.1"
criterion = {version = "0.7.0", features = ["html_reports"]}


[[bench]]
name = "bench_fit"
harness = false
