[package]
name = "polywag"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
pastey = "0.2.1"
wide = "1.1.1"
bumpalo = {version = "3.20.2", features= ["boxed", "collections"]}
cfg-if = "1.0.4"



[dev-dependencies]
approx = "0.5.1"
f256 = { version = "0.11.2", default-features = false }
criterion = {version = "0.7.0", features = ["html_reports"]}


[[bench]]
name = "bench_fit"
harness = false
